[package]
name = "ore-hq-client"
version = "1.5.3"
edition = "2021"
description = "Ore mining pool client."
license = "Apache-2.0"
repository = "https://github.com/Kriptikz/ore-hq-client"
keywords = ["solana", "crypto", "mining", "client", "mining-pool"]

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
clap = { version = "4.5.13", features = ["derive"] }
core_affinity = "0.8.1"
ore-api = "=2.1.6"
ore-utils = "=2.1.6"
drillx_2 = "1.0.0"
futures-util = "0.3.30"
reqwest = "^0.11.0"
rpassword = "7.3.1"
solana-sdk = "2.0.6"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
url = "2.5.2"
spl-token = "6.0.0"
rayon = "1.10"
crossbeam = "0.8.0"
rand = "0.8.4"
rand_chacha = "0.3.0"

[profile.release]
opt-level = 3     # Full optimisations
codegen-units = 1 # Better optimization with fewer codegen units
lto = true        # Enable Link Time Optimization (LTO)
debug = false     # Disable debug info to reduce binary size
panic = 'abort'   # Reduces the binary size further by not including unwinding information
rpath = false
incremental = false
overflow-checks = false

[build]
rustflags = ["-C", "target-cpu=native"]
